Update example